# hipMM

./: .pre-commit-config.yaml  .readthedocs.yaml  BUILD_NOTES.md  CCCL_FIX_SUMMARY.md  CMakeLists.txt  EMAIL_REPLY.txt  README.md  REPLY_TO_COLLEEN.md  VERSION  chipStar.md  env.sh  install_chipstar_suite.sh  print_env.sh  rapids_config.cmake  test_reproducer  test_reproducer.cpp  test_reproducer_fixed.sh  versions.json
._upstream/: Doxyfile
benchmarks/: CMakeLists.txt
benchmarks/cuda_stream_pool/: cuda_stream_pool_bench.cpp
benchmarks/device_uvector/: device_uvector_bench.cu
benchmarks/multi_stream_allocations/: multi_stream_allocations_bench.cu
benchmarks/random_allocations/: random_allocations.cpp
benchmarks/synchronization/: synchronization.hpp
benchmarks/utilities/: log_parser.hpp  simulated_memory_resource.hpp
cmake/: chipstar.cmake
conda/environments/: all_rocm_arch-x86_64.yaml  build-release_rocm-70_arch-x86_64.yaml  build-release_rocm-latest_arch-x86_64.yaml  install_rocm-70_arch-x86_64.yaml  install_rocm-latest_arch-x86_64.yaml  rocm-70_build_release-x86_64.yaml  rocm-70_install-x86_64.yaml  rocm_build_base-x86_64.yaml
docs/: build_in_venv.sh  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  license.doctree
docs/_build/doctrees/install/: BUILD.doctree  INSTALL.doctree  hipMM-support.doctree
docs/_build/doctrees/reference/hipmm/: python_api.doctree
docs/_build/html/: .buildinfo  404.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: license.rst
docs/_build/html/_sources/install/: BUILD.rst  INSTALL.rst
docs/_build/html/_sources/reference/hipmm/: python_api.rst
docs/_build/html/install/: BUILD.html  INSTALL.html  hipMM-support.html
docs/_build/html/reference/hipmm/: python_api.html
docs/doxygen/: Doxyfile
docs/install/: BUILD.rst  INSTALL.md  INSTALL.rst  hipMM-support.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
include/rmm/: cuda_device.hpp  cuda_runtime_api.h  cuda_stream.hpp  cuda_stream_view.hpp  device_buffer.hpp  exec_policy.hpp
include/rmm/detail/: error.hpp  runtime_async_alloc.hpp  stack_trace.hpp
include/rmm/detail/nvtx/: ranges.hpp
include/rmm/mr/: pinned_host_memory_resource.hpp
include/rmm/mr/device/: arena_memory_resource.hpp  binning_memory_resource.hpp  cuda_async_memory_resource.hpp  cuda_async_view_memory_resource.hpp  fixed_size_memory_resource.hpp  pool_memory_resource.hpp
include/rmm/mr/device/detail/: arena.hpp  stream_ordered_memory_resource.hpp
python/librmm/: pyproject.toml
python/rmm/: pyproject.toml
python/rmm/hipmm/: __init__.py
python/rmm/hipmm/tests/: conftest.py  test_import.py
python/rmm/rmm/: __init__.py  _version.py
python/rmm/rmm/allocators/: numba.py
python/rmm/rmm/librmm/: _torch_allocator.cpp
python/rmm/rmm/pylibrmm/: device_buffer.pyx  stream.pyx
python/rmm/rmm/tests/: test_rmm.py
tests/: CMakeLists.txt  cuda_stream_pool_tests.cpp  cuda_stream_tests.cpp  device_buffer_tests.cu  device_scalar_tests.cpp  prefetch_tests.cpp
tests/mr/device/: arena_mr_tests.cpp  mr_ref_multithreaded_tests.cpp  mr_ref_test.hpp  pool_mr_tests.cpp  prefetch_resource_adaptor_tests.cpp  system_mr_tests.cu  test_utils.hpp
tests/mr/host/: mr_ref_tests.cpp
